--- a/features.html
+++ b/features.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <title>Build your business</title>
+        <link rel="stylesheet" href="responsiveFeatures.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="stylesFeatures.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -51,32 +53,30 @@
                 </div>
             </div>
                 <div class="col-12 g-3">
-                    <div class="card_mb-3" >
-                        <div class="row g-8">
-                            <div class="col-md-3">
-                                <img src="https://place-puppy.com/300x300" class="ing-fluid rounded-start" alt=" ... "> 
+                    <div class="card_mb-31" >
+                        <div class="row1-1 g-8">
+                            <img src="https://place-puppy.com/200x200" alt=" ... "> 
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row2">
+                                <h5>Card title</h5>
+                                <ul>
+                                    <li>Caracteristica</li>
+                                    <li>Caracteristica</li>
+                                    <li>Caracteristica</li> 
+                                    <li>Caracteristica</li>
+                                </ul>
                             </div>
                         </div>
-                            <div class="col-md-6">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <ul>
-                                        <li>Caracteristica</li>
-                                        <li>Caracteristica</li>
-                                        <li>Caracteristica</li> 
-                                        <li>Caracteristica</li>
-                                    </ul>
-                                </div>
+                        <div class="col-md-3 d-flex justify-content-end align-items-start">
+                            <div class="p-2 d-flex flex-column align-items-end">
+                                <h4 class="text-frimary">
+                                    $1,000.00
+                                </h4>
+                                <p>Stock: <span class="fw-bold text-align-right">100</span></p>
+                                <button class="btn btn-warning text-white" type="submit">Buy <i class="fa-solid fa-cart-shopping"></i></button>
                             </div>
-                            <div class="col-md-3 d-flex justify-content-end align-items-start">
-                                <div class="p-2 d-flex flex-column align-items-end">
-                                    <h4 class="text-frimary">
-                                        $1,000.00
-                                    </h4>
-                                    <p>Stock: <span class="fw-bold text-align-right">100</span></p>
-                                    <button class="btn btn-warning text-white" type="submit">Buy <i class="fa-solid fa-cart-shopping"></i></button>
-                                </div>
-                            </div>
+                        </div>
                     </div>
                 </div>
         </div>
